--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,11 @@
 ---
-import { SITE } from 'astrowind:config';
+import Image from '~/components/common/Image.astro';
+
+const logo = '~/assets/images/logo.png';
 ---
 
+<Image src={logo} alt="logo" width="48" />
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
->
-  &#x1F33F; {SITE?.name}
+  >Sauga Wellness Foundation
 </span>
