--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -16,15 +16,15 @@ const metadata = {
   <!-- HeroText Widget ******************* -->
 
   <HeroText
-    tagline="Pricing"
-    title="Stellar Pricing for Every Journey"
+    tagline="Memberships"
+    title="Be a part of our journey"
     subtitle="Choose the perfect plan that aligns with your cosmic goals."
   />
 
   <!-- Pricing Widget ******************* -->
 
   <Prices
-    title="Our prices"
+    title="Our memberhips"
     subtitle="Only pay for what you need"
     prices={[
       {
