--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -7,5 +7,5 @@ const logo = '~/assets/images/logo.png';
 <Image src={logo} alt="logo" width="48" />
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
-  >Sauga Wellness Foundation
+  >Sauga Wellness
 </span>
