--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,6 @@ import Layout from '~/layouts/PageLayout.astro';
 import Hero from '~/components/widgets/Hero.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 import Features2 from '~/components/widgets/Features2.astro';
-import Brands from '~/components/widgets/Brands.astro';
 
 import { YouTube } from 'astro-embed';
 import { getPermalink } from '~/utils/permalinks';
@@ -18,7 +17,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Sauga Wellness Foundation"
+    tagline="Live life to the fullest"
     actions={[
       {
         variant: 'primary',
@@ -27,9 +26,7 @@ const metadata = {
       },
     ]}
   >
-    <Fragment slot="title">
-      Awareness &#183; <span class="text-accent dark:text-white highlight">Advocacy</span> &#183; Accessibilty
-    </Fragment>
+    <Fragment slot="title"> Awareness &#183; Advocacy &#183; Accessibilty </Fragment>
 
     <Fragment slot="subtitle">
       Our vision is to enhance awareness and accessibilty to healthcare resources by actively engaging marginalized,
@@ -52,59 +49,12 @@ const metadata = {
   <Features2
     id="about-us"
     title="About us"
-    subtitle="Sauga Wellness Foundation is a not for profit organization dedicated to fostering resilient and healthy communities. We are a team of passionate health and wellness advoccates commited to improving the lives of those we server. Our mission is to share our expertise and experiences to enhance the health, wellness and overall quality of life for our community."
+    subtitle="Sauga Wellness Foundation is a not-for-profit organization dedicated to fostering resilient and healthy communities. We are a team of passionate health and wellness advocates committed to improving the lives of those we serve. Our mission is to share our expertise and experiences to enhance the health, wellness and overall quality of life for our community."
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
   </Features2>
-
-  <!-- Brands Widget ****************** -->
-
-  <Brands
-    title="Partnerships & Collaborations"
-    subtitle="At Astrowind, we believe in the power of collaboration to drive innovation and create exceptional experiences."
-    icons={[]}
-    images={[
-      {
-        src: 'https://cdn.pixabay.com/photo/2015/05/26/09/37/paypal-784404_1280.png',
-        alt: 'Paypal',
-      },
-      {
-        src: 'https://cdn.pixabay.com/photo/2021/12/06/13/48/visa-6850402_1280.png',
-        alt: 'Visa',
-      },
-      {
-        src: 'https://cdn.pixabay.com/photo/2013/10/01/10/29/ebay-189064_1280.png',
-        alt: 'Ebay',
-      },
-
-      {
-        src: 'https://cdn.pixabay.com/photo/2015/04/13/17/45/icon-720944_1280.png',
-        alt: 'Youtube',
-      },
-      {
-        src: 'https://cdn.pixabay.com/photo/2013/02/12/09/07/microsoft-80658_1280.png',
-        alt: 'Microsoft',
-      },
-      {
-        src: 'https://cdn.pixabay.com/photo/2015/04/23/17/41/node-js-736399_1280.png',
-        alt: 'Node JS',
-      },
-      {
-        src: 'https://cdn.pixabay.com/photo/2015/10/31/12/54/google-1015751_1280.png',
-        alt: 'Google',
-      },
-      {
-        src: 'https://cdn.pixabay.com/photo/2021/12/06/13/45/meta-6850393_1280.png',
-        alt: 'Meta',
-      },
-      {
-        src: 'https://cdn.pixabay.com/photo/2013/01/29/22/53/yahoo-76684_1280.png',
-        alt: 'Yahoo',
-      },
-    ]}
-  />
 
   <!-- Features2 Widget ************** -->
 
@@ -170,8 +120,8 @@ const metadata = {
     <Fragment slot="title">Be a part of our vision</Fragment>
 
     <Fragment slot="subtitle">
-      Become part of vibrant, purpose driven team where you will find exciting opportunities and the chance to make a
-      real, lasting impact on the community. Together we can shape healthier, more resilient lives.
+      Become part of vibrant, purpose driven team where you will find exciting opportunities to make a real, lasting
+      impact on the community. Together we can shape healthier, more resilient lives.
     </Fragment>
   </CallToAction>
 </Layout>
