--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,9 @@ const metadata = {
       },
     ]}
   >
-    <Fragment slot="title"> Awareness &#183; Advocacy &#183; Accessibilty </Fragment>
+    <Fragment slot="title">
+      Awareness &#183; <span class="text-accent dark:text-white highlight">Advocacy</span> &#183; Accessibilty
+    </Fragment>
 
     <Fragment slot="subtitle">
       Our vision is to enhance awareness and accessibilty to healthcare resources by actively engaging marginalized,
