--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -16,7 +16,7 @@ const metadata = {
   <HeroText title="Be a part of our journey" subtitle="Join us and contribute to a healthier, more inclusive future!" />
 
   <Features3
-    title="Ways to get involoved"
+    title="Ways to get involved"
     subtitle="We offer a variety of ways to contribute, whether you prefer hands-on involvement at events or sharing your expertise through educationcatoin workshop. Explore the diffeent ways you can volunteer"
     columns={2}
     items={[
@@ -76,11 +76,47 @@ const metadata = {
     </Fragment>
   </Content>
 
-  <!-- CallToAction Widget *********** -->
+  <Content
+    isAfterContent
+    items={[
+      {
+        title: 'Time Savings',
+        description:
+          'Streamline your workflow, enabling you to create stunning materials efficiently and allocate more time to your core tasks.',
+        icon: 'tabler:clock',
+      },
+      {
+        title: 'Professional Appearance',
+        description:
+          'Elevate your projects with the polished and sophisticated look that our templates provide, making a lasting impression on your audience.',
+        icon: 'tabler:school',
+      },
+      {
+        title: 'Cost-Efficiency',
+        description:
+          'Benefit from cost savings by avoiding the need for custom design work, as our templates offer professional-grade designs at a fraction of the cost.',
+        icon: 'tabler:coin',
+      },
+      {
+        title: 'Instant Download',
+        description:
+          'Enjoy immediate access to your chosen templates upon purchase, enabling you to begin working on your projects without delay.',
+        icon: 'tabler:file-download',
+      },
+    ]}
+    image={{
+      src: 'https://images.unsplash.com/photo-1552664688-cf412ec27db2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80',
+      alt: 'Benefits Image',
+    }}
+  >
+    <Fragment slot="content">
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Member Benefits</h3>
+    </Fragment>
+  </Content>
 
   <CallToAction
-    title="Ready to boost your projects?"
-    subtitle="Join our community of satisfied customers who have transformed their work with our templates."
+    title="Become a Member"
+    subtitle="Joining Sauga Wellness Foundation is a greate wat to show your support, stay informed, and a have a voice in shaping our future."
     actions={[
       {
         variant: 'primary',
