--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Live life to the fullest"
+    tagline="Welcome to Sauga Wellness Foundation"
     actions={[
       {
         variant: 'primary',
@@ -34,7 +34,7 @@ const metadata = {
 
     <Fragment slot="subtitle">
       Our vision is to enhance awareness and accessibilty to healthcare resources by actively engaging marginalized,
-      racialized communities and newcomers in their native languages.
+      racialized communities and newcomers.
     </Fragment>
 
     <Fragment slot="image">
@@ -65,23 +65,42 @@ const metadata = {
   <Features2
     id="services"
     title="Our Services"
+    columns={3}
     items={[
       {
-        title: 'Individual Services',
+        title: 'Culturally Tailored Health Programs',
         description:
-          "A dedicated mentor will provide personalized one-on-one coaching by finding the food and lifestyle that works best for you. We'll provide you with health care resources that will help you navigate the wellness path that works best for you. Our emphasis is on self love and self care. If you take care of yourself, you will be in a much better position to take care of your loved ones.",
+          "We develop health programs that address the specific needs, beliefs, and practices of various cultural backgrounds. We offer nutrition advice and mental health support that respects cultural values, or traditional healing methods. We'll connect you with health care resources that will help you navigate the wellness path that works best for you. Our emphasis is on self love and self care. If you take care of yourself,you will be in a much better position to take care of your loved ones.",
         icon: 'flat-color-icons:document',
       },
       {
-        title: 'Family Services',
+        title: 'Family-Oriented Health Programs',
         description:
-          'Work as a team. Get your family involved into a better lifestyle that keep you and your loving circle happy and healthy. Instead of conflicts and arguments, strive for laughter, compassion and understanding. We offer all kinds of supports and programs that empower you to take charge of your physical, emontional and mental health',
+          'Work as a team. Get your family involved into a better lifestyle that keep you and your loving circle happy and healthy. Instead of conflicts and arguments, strive for laughter, compassion and understanding. We offer all kinds of supports and programs that empower you to take charge of your physical, emotional and mental health. We offer maternal health education,parenting support,child nutrition workshops and intergrational wellness programs that cater to different age groups in a family',
         icon: 'flat-color-icons:conference-call',
       },
       {
-        title: 'Newcomer Services',
+        title: 'Newcomer Wellness Integration Program',
         description:
-          'We offer settlements services to all students, immigrants, refugees and naturalized Canadians. We offer information, resources and guidance in all languages including, Dari, Pashto, Urdu, Hindi, Arabic, Punjabi & Bengali. Our programs are inclusive & welcome people from all faiths, gender,ethnicity & sexual orientation',
+          'We offer a holistic health integration program for newcomers, addressing the physical, mental and emotional challenges of settling in a new country. We offer workshops that cover nutrition, fitness, mental wellness, and navigating the canadian healthcare system. We offer information, resources and guidance in all languages including, Dari, Pashto, Urdu, Hindi, Arabic, Punjabi & Bengali. Our programs are inclusive & welcome people from all faiths, gender, ethnicity & sexual orientation',
+        icon: 'flat-color-icons:voice-presentation',
+      },
+      {
+        title: 'Community Health Ambassadors',
+        description:
+          'We train community members aas Health Ambassadors who act as laisions between our foundation and their respective communities. These Ambassadors can offer workshops, health screening, and information on healthcare access in multiple languages.',
+        icon: 'flat-color-icons:voice-presentation',
+      },
+      {
+        title: 'Financial Wellness and Health Integration Program',
+        description:
+          'We offer financial wellness workshops to complement physical and mental health services.Many health issues are exacerbated by financial stress, especially in marginalised communities, so providing support on budgeting, managing healthcare costs, and accessing financial aid can be powerful guidance that can help improve many lives.
+        icon: 'flat-color-icons:voice-presentation',
+      },
+      {
+        title: 'Digital Wellness and Health Literacy Program',
+        description:
+          'We offer digital literacy and wellness workshops to help marginalized communities, including newcomers, navigate the digital healthcare world. As healthcare becomes more digital, many marginalized groups are left behind due to lack of access or skills. Our workshops help you become digitally savvy so people can access the digital healthcare world with ease.',
         icon: 'flat-color-icons:voice-presentation',
       },
     ]}
@@ -123,8 +142,8 @@ const metadata = {
     <Fragment slot="title">Be a part of our vision</Fragment>
 
     <Fragment slot="subtitle">
-      Become part of vibrant, purpose driven team where you will find exciting opportunities to make a real, lasting
-      impact on the community. Together we can shape healthier, more resilient lives.
+      Become part of vibrant, purpose driven team where you will find exciting opportunities to make a real,lasting
+      impact in your community. Together we can shape healthier, more resilient lives.
     </Fragment>
   </CallToAction>
 </Layout>
