--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -17,13 +17,13 @@ const metadata = {
 
   <Features3
     title="Ways to get involved"
-    subtitle="We offer a variety of ways to contribute, whether you prefer hands-on involvement at events or sharing your expertise through educationcatoin workshop. Explore the diffeent ways you can volunteer"
+    subtitle="We offer a variety of ways to contribute, whether you prefer hands-on involvement at events or sharing your expertise through educationcatoin workshop. Explore the different ways you can volunteer"
     columns={2}
     items={[
       {
         title: 'Community Outreach Volunteer',
         description:
-          'Assist in spreading awareness about our health and wellness programs by engaging with local communities, attending events, and distributing informational materials.',
+          'Assist in spreading awareness about our health and wellness programs by engaging with local communities, attending events, and distributing informational materials. Let us know if you can speak another language to overcome any language barriers in our out',
         icon: 'tabler:stairs',
       },
       {
