--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,7 +94,7 @@ const metadata = {
       {
         title: 'Financial Wellness and Health Integration Program',
         description:
-          'We offer financial wellness workshops to complement physical and mental health services.Many health issues are exacerbated by financial stress, especially in marginalised communities, so providing support on budgeting, managing healthcare costs, and accessing financial aid can be powerful guidance that can help improve many lives.
+          'We offer financial wellness workshops to complement physical and mental health services.Many health issues are exacerbated by financial stress, especially in marginalised communities, so providing support on budgeting, managing healthcare costs, and accessing financial aid can be powerful guidance that can help improve many lives.',
         icon: 'flat-color-icons:voice-presentation',
       },
       {
