--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -80,28 +80,29 @@ const metadata = {
     isAfterContent
     items={[
       {
-        title: 'Time Savings',
-        description:
-          'Streamline your workflow, enabling you to create stunning materials efficiently and allocate more time to your core tasks.',
-        icon: 'tabler:clock',
+        title: '',
+        description: 'Receive our e-newsletter with updates on our programs, events, and initiatives.',
+        icon: 'tabler:arrow-badge-right-filled',
       },
       {
-        title: 'Professional Appearance',
-        description:
-          'Elevate your projects with the polished and sophisticated look that our templates provide, making a lasting impression on your audience.',
-        icon: 'tabler:school',
+        title: '',
+        description: 'Stay informed about the latest wellness resources and community health programs.',
+        icon: 'tabler:arrow-badge-right-filled',
       },
       {
-        title: 'Cost-Efficiency',
-        description:
-          'Benefit from cost savings by avoiding the need for custom design work, as our templates offer professional-grade designs at a fraction of the cost.',
-        icon: 'tabler:coin',
+        title: '',
+        description: 'Gain the right to nominate and be nominated for a position on our Board of Directors.',
+        icon: 'tabler:arrow-badge-right-filled',
       },
       {
-        title: 'Instant Download',
-        description:
-          'Enjoy immediate access to your chosen templates upon purchase, enabling you to begin working on your projects without delay.',
-        icon: 'tabler:file-download',
+        title: '',
+        description: 'Contribute your expertise by serving on one of our board committees.',
+        icon: 'tabler:arrow-badge-right-filled',
+      },
+      {
+        title: '',
+        description: 'Participate and vote at our Annual General Meeting, where important descisions are made .',
+        icon: 'tabler:arrow-badge-right-filled',
       },
     ]}
     image={{
@@ -116,7 +117,7 @@ const metadata = {
 
   <CallToAction
     title="Become a Member"
-    subtitle="Joining Sauga Wellness Foundation is a greate wat to show your support, stay informed, and a have a voice in shaping our future."
+    subtitle="Joining Sauga Wellness Foundation is a great wat to show your support, stay informed, and a have a voice in shaping our future."
     actions={[
       {
         variant: 'primary',
