--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -24,7 +24,7 @@ const metadata = {
       {
         title: 'Community Outreach Volunteer',
         description:
-          'Assist in spreading awareness about our health and wellness programs by engaging with local communities, attending events, and distributing informational materials. Let us know if you can speak another language to overcome any language barriers in our out',
+          'Assist in spreading awareness about our health and wellness programs by engaging with local communities, attending events, and distributing informational materials. Let us know if you can speak another language to overcome any language barriers.',
         icon: 'tabler:stairs',
       },
       {
@@ -65,10 +65,10 @@ const metadata = {
     image={{ src: '~/assets/images/inspire-1.jpg', alt: 'Inspire Image' }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Building on modern foundations</h3>
-      The most fulfilled people are the ones who get up every morning and stand for something larger than themselves. They’re
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2"></h3>
+      "The most fulfilled people are the ones who get up every morning and stand for something larger than themselves. They’re
       the people who care about others, who will extend a helping hand to someone in need or will speak up about an injustice
-      when they see it.
+      when they see it".
       <div class="italic">- Wilma Mankiller</div>
     </Fragment>
 
