--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,7 +118,7 @@ const metadata = {
     columns={2}
     items={[
       {
-        title: 'Phone: +1-416-651-0420',
+        title: 'Phone: +1 (289) 643-8287',
         icon: 'tabler:phone',
       },
       {
