Update email address from info@saugawellness.com to contact@saugawellness.com

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -52,7 +52,7 @@ const metadata = {
       },
       {
         title: 'Email',
-        description: 'info@saugawellness.com',
+        description: 'contact@saugawellness.com',
         icon: 'tabler:mail',
       },
       {
