--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,7 +122,7 @@ const metadata = {
         icon: 'tabler:phone',
       },
       {
-        title: 'Email: info@saugawellness.com',
+        title: 'Email: contact@saugawellness.com',
         icon: 'tabler:mail',
       },
     ]}
