--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -133,31 +133,35 @@ const metadata = {
     title="Board of Directors"
     testimonials={[
       {
-        testimonial: `Sahar has been a professional in business and finances for 23 years and is serving as a chief executive officer at Sauga wellness foundation, which believes in accessibility & advocacy of the health and wellness industry for all. Sahar has been a community activist and volunteer for 20 years and is a Registered holistic nutritionist. She holds a degree in Commerce and Economics.`,
+        testimonial: `Sahar is a seasoned professional with over two decades of experience in business and finance and a passionate advocate for community health and wellness. As the CEO of Sauga Wellness Foundation, she leads with a vision of creating accessible and equitable health and wellness opportunities for all, particularly for marginalized and racialized communities.
+With a degree in Commerce and Economics and two decades of experience as a community activist and volunteer, Sahar has cultivated a deep understanding of how to drive meaningful change. As a Registered Holistic Nutritionist, she specializes in supporting individuals in addressing hormonal imbalances, anxiety, insomnia, digestive challenges, and burnout through safe and effective natural therapies. Her passion for empowering individuals and organizations through holistic care is matched by her commitment to fostering resilient, thriving communities.Under Sahar's leadership, Sauga Wellness Foundation is dedicated to breaking down barriers to health and wellness, promoting advocacy, and nurturing sustainable well-being for all.`,
         name: 'Sahar Salman',
-        job: 'Chair',
+        job: 'Chief Executive Officer | Registered Holistic Nutritionist',
         image: {
           src: '~/assets/images/2.png',
           alt: 'Sahar Salman Image',
         },
       },
       {
-        testimonial: `Shimaa is an international medical graduate pediatric oncologist and has a Master of Health Administration and Management from the University of Toronto. Since 2013, Shimaa has worked with many nonprofit health organizations working with immigrants and refugees. She is very passionate and leads health awareness programs.`,
+        testimonial: `Shimaa is an internationally trained pediatric oncologist with a Master of Health Administration and Management from the University of Toronto. Since 2013, she has worked extensively with nonprofit health organizations, focusing on providing care and support to immigrants and refugees. Her medical expertise and leadership in health administration have allowed her to address critical gaps in healthcare accessibility for vulnerable populations.
+
+A passionate advocate for health equity, Shimaa is dedicated to leading impactful health awareness programs that empower communities with knowledge and resources. Her work bridges the gap between medical care and public health education, fostering healthier and more informed communities.`,
         name: 'Shimaa Nassif',
-        job: 'Director Health Awareness',
+        job: 'Pediatric Oncologist | Health Administration Expert',
         image: {
           src: '~/assets/images/1.png',
-          alt: 'Josh Wilkinson Image',
+          alt: 'Shimaa Nassif Image',
         },
       },
       {
-        testimonial:
-          'Bushra is an international medical graduate. Presently working at a renowned cardiology clinic. She has been an activist and an advocate for mental health for more than 30 years. Bushra is an active member of our community who volunteer on regular basis besides her busy life.',
-        name: 'Bushra Rehan',
-        job: 'Director Newcomer Services',
+        testimonial: `Dr. Saman Husain is a licensed Naturopathic Doctor (ND) based in Ontario, specializing in hormonal and digestive health. With a holistic, evidence-based approach, she empowers individuals to take control of their well-being by addressing the root causes of health concerns and fostering sustainable, healthy lifestyles.
+
+A passionate advocate for health equity and accessibility, Dr. Husain is committed to breaking down barriers to wellness. She works tirelessly to ensure that individuals from all backgrounds have access to the knowledge and resources needed to lead healthier, more fulfilling lives. Through her dedication to preventive care and inclusivity, Dr. Husain strives to create a more equitable approach to holistic health care for all.`,
+        name: 'Saman Husain',
+        job: 'Licensed Naturopathic Doctor | Public Health Advocate',
         image: {
-          src: '~/assets/images/3.png',
-          alt: 'Sidney Hansen Image',
+          src: '~/assets/images/image-4.jpg',
+          alt: 'Saman Husain Image',
         },
       },
     ]}
