--- a/src/components/widgets/Testimonials.astro
+++ b/src/components/widgets/Testimonials.astro
@@ -30,14 +30,7 @@ const {
             <div class="flex flex-col p-4 md:p-6 rounded-md shadow-xl dark:shadow-none dark:border dark:border-slate-600">
               {title && <h2 class="text-lg font-medium leading-6 pb-4">{title}</h2>}
               {testimonial && (
-                <blockquote class="flex-auto">
-                  <p class="text-muted">" {testimonial} "</p>
-                </blockquote>
-              )}
-
-              <hr class="border-slate-200 dark:border-slate-600 my-4" />
-
-              <div class="flex items-center">
+                <div class="flex items-center">
                 {image && (
                   <div class="h-10 w-10 rounded-full border border-slate-200 dark:border-slate-600">
                     {typeof image === 'string' ? (
@@ -60,6 +53,13 @@ const {
                   {job && <p class="text-xs text-muted">{job}</p>}
                 </div>
               </div>
+              <hr class="border-slate-200 dark:border-slate-600 my-4" />
+
+                <blockquote class="flex-auto">
+                  <p class="text-muted">{testimonial}</p>
+                </blockquote>
+              )}
+
             </div>
           </div>
         ))
